--- a/scss/_pages/_library.scss
+++ b/scss/_pages/_library.scss
@@ -4,7 +4,8 @@
     display: none;
 }
 
-#mainLibrary h1,#mainLibrary h3 {
+#mainLibrary h1,
+#mainLibrary h3 {
     text-align: center;
 }
 
@@ -55,9 +56,7 @@
 }
 
 #mainLibrary .books {
-    //overflow-x: hidden;
     overflow-y: auto;
-    //white-space: nowrap;
 }
 
 #mainLibrary .books img:hover {
@@ -98,10 +97,10 @@
 }
 
 .popup {
-    //margin: 70px auto;
-    //padding: 20px;
     left: 10%;
     top: 50%;
+    -webkit-transform: translateY(-50%);
+    -ms-transform: translateY(-50%);
     transform: translateY(-50%);
     background: #fff;
     border-radius: 5px;
@@ -133,9 +132,7 @@
 }
 
 .popup .books {
-    //max-height: 30%;
     max-height: 80vh;
-    //overflow: auto;
 }
 
 //wide
